Name:                yaml-with-class
Version:             0.0.0
Synopsis:            Generic, sharing-retaining YAML serialization and deserialization

Description: YAML serialization and deserialization from general Haskell data 
	     to ByteStrings or files containing YAML documents. See 
	     "Data.YamlObject" for usage documentation.
	     .
	     This package is heavily based on modified versions of the packages RJson by Alex Drummond, data-object-yaml by Michael Snoyman and Anton Ageev, data-object by Michael Snoyman and Nicolas Pouillard, and yaml by Michael Snoyman, Anton Ageev and Kirill Simonov.

-- The license under which the package is released.
License:             BSD3

-- The file containing the license text.
License-file:        LICENSE

-- The package author(s).
Author:              Ari Rahikkala

-- An email address to which users can send suggestions, bug reports,
-- and patches.
Maintainer:          ari.rahikkala@gmail.com

-- A copyright notice.
-- Copyright:           

Category:            Data

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Library
  Exposed-modules: Text.YamlPickle, Data.DynStableName, Data.YamlObject
  
  -- Packages needed in order to build this package.
  Build-depends: hashmap == 1.2.*, enumerator == 0.4.*, mtl == 2.*, transformers == 0.2.*, convertible-text == 0.3.*, bytestring == 0.9.*, text == 0.*, failure == 0.1.*, containers == 0.4.*, base == 4.*, array == 0.3.*, attempt == 0.3.*, syb-with-class == 0.6.*

  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  